--- a/config.json
+++ b/config.json
@@ -1,10 +1,12 @@
 {
-  "name" : "node_bme",
-  "ssid" : "trnspndrExt",
-  "pass" : "hwasong5",
+  "name" : "node2",
+  "ssid" : "Endeavour",
+  "pass" : "0neSmol$tep",
   "broker" : "192.168.100.70",
   "sda_pin" : 4,
   "scl_pin" : 5,
-  "period" : 3
+  "period" : 10,
+  "sleep_time" : 3,
+  "sleep_flag" : true 
 }
 
